Catching up on some older missed considerations and cleanup

--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -1,8 +1,7 @@
-
 <!doctype html>
 <html>
     <head>
-        <title>Error Notification</title>
+        <title>Error Annex</title>
 
         <link rel="stylesheet" href="styles/style.css"/>
 
