Adding icons and iframe logic.

--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -20,6 +20,7 @@
 
                     <div class="type"> {errorType} </div>
                     <div class="origin"> {origin} </div>
+                    <div class="iframeInfo"> {iframeUrl} </div>
                     <div class="occurance"> {occurance} </div>
 
                     <div class="call_stack_content">
