--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -18,11 +18,13 @@
             <ul data-error-list class="no_style_list hide errors_list">
                 <li class="clearfix">
 
-                    <div class="type"> {errorType} </div>
-                    <div class="origin"> {origin} </div>
+                    
+                    <div class="max_width_bound">
+                        <div class="type"> {errorType} </div>
+                        <div class="origin"> {origin} </div>
+                    </div>
                     <div class="iframeInfo"> {iframeUrl} </div>
                     <div class="occurance"> {occurance} </div>
-
                     <div class="call_stack_content">
                         {stack}
                     </div>
