adding chrome key

--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Errors on <em data-host></em></h1>
+            <h1 class="max_width_bound">Errors on <em data-host></em></h1>
         </header>
         <div class="errors_container">
 
