small ui tweaks

--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -13,7 +13,7 @@
         </header>
         <div class="errors_container">
 
-            <div data-no-errors class="hide"> No errors found :)</div>
+            <div data-no-errors class="hide no_errors"> No errors found! Yay :)</div>
 
             <ul data-error-list class="no_style_list hide errors_list">
                 <li class="clearfix">
