--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -5,6 +5,8 @@
 
         <link rel="stylesheet" href="styles/style.css"/>
 
+
+        <script src="scripts/gator.min.js"></script>
         <script src="scripts/interface.js"></script>
 
 
@@ -27,18 +29,22 @@
 
                 <script id="template--error-list-item" type="text/x-template">
 
-                    <li class="clearfix">
+                    <li class="clearfix {itemClasses}">
+                        <div class="occurance" title="{occuranceTitle}"> 
+                        {occurance} 
+                        </div>
                         <div class="max_width_bound">
                             <div class="type"> {errorType} </div>
                             <div class="origin"> {origin} </div>
                         </div>
-                        <div class="iframeInfo"> {iframeUrl} </div>
-                        <div class="occurance"> {occurance} </div>
-                        <div class="call_stack_content">
-                            {stack}
-                        </div>
+                        <div>
+                            <div class="iframeInfo"> {iframeUrl} </div>
 
-                        <!-- {errorName} -->
+                            <div class="call_stack_content">
+                                {stack}
+                            </div>
+                        </div>
+                        
                     </li>
 
                 </script>
