--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -15,6 +15,16 @@
     </head>
     <body>
         <header>
+
+            <!-- OPTIONS COG -->
+            <a id="options_cog" href="#">
+                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" baseProfile="tiny" height="24px" version="1.2" viewBox="0 0 24 24" width="24px" xml:space="preserve">
+                    <path d="M9.387 17.548l0.371 1.482C9.891 19.6 10.4 20 11 20h1c0.55 0 1.109-0.437 1.242-0.97l0.371-1.482 c0.133-0.533 0.675-0.846 1.203-0.694l1.467 0.42c0.529 0.2 1.188-0.114 1.462-0.591l0.5-0.867 c0.274-0.477 0.177-1.179-0.219-1.562l-1.098-1.061c-0.396-0.383-0.396-1.008 0.001-1.39l1.096-1.061 c0.396-0.382 0.494-1.084 0.22-1.561l-0.501-0.867c-0.275-0.477-0.933-0.742-1.461-0.591l-1.467 0.4 c-0.529 0.151-1.07-0.161-1.204-0.694l-0.37-1.48C13.109 5.4 12.6 5 12 5h-1c-0.55 0-1.109 0.437-1.242 0.97l-0.37 1.5 C9.254 8 8.7 8.3 8.2 8.145l-1.467-0.42C6.188 7.6 5.5 7.8 5.3 8.315l-0.5 0.9 c-0.274 0.477-0.177 1.2 0.2 1.562l1.096 1.059c0.395 0.4 0.4 1 0 1.391l-1.098 1.1 c-0.395 0.383-0.494 1.085-0.219 1.562l0.501 0.867c0.274 0.5 0.9 0.7 1.5 0.591l1.467-0.42 C8.712 16.7 9.3 17 9.4 17.548z M11.5 10.5c1.104 0 2 0.9 2 2c0 1.104-0.896 2-2 2s-2-0.896-2-2 C9.5 11.4 10.4 10.5 11.5 10.5z"/>
+                </svg>
+            </a>
+
+
+
             <h1 class="max_width_bound">Errors on <em data-host></em></h1>
         </header>
         <div class="errors_container">
@@ -53,6 +63,7 @@
 
         </div>
 
+        <div class="options_container"></div>
 
     </body>
 </html>
