meh.. reconsidering this

--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -32,6 +32,11 @@
             
             <script id="template--no-errors" type="text/x-template">
                 <div data-no-errors class="hide no_errors"> No errors found! Yay :)</div>
+                <div class="no_errors_quotes">
+                    <blockquote>
+                        
+                    </blockquote>
+                </div>
             </script>
 
 
