feature-copy: initial attempt at the copy ui

--- a/chrome/interface.html
+++ b/chrome/interface.html
@@ -40,21 +40,30 @@
                 <script id="template--error-list-item" type="text/x-template">
 
                     <li class="clearfix {itemClasses}">
-                        <div class="occurance" title="{occuranceTitle}"> 
-                        {occurance} 
-                        </div>
-                        <div class="max_width_bound">
-                            <div class="type"> {errorType} </div>
-                            <div class="origin"> {origin} </div>
-                        </div>
-                        <div>
-                            <div class="iframeInfo"> {iframeUrl} </div>
 
-                            <div class="call_stack_content">
-                                {stack}
+                        <div class="item_actions">
+                            <div class="action-copy">
+                                <svg viewBox="0 0 24 24" alt="Copy Error">
+                                    <path fill="#000000" d="M15,7H20.5L15,1.5V7M8,0H16L22,6V18A2,2 0 0,1 20,20H8C6.89,20 6,19.1 6,18V2A2,2 0 0,1 8,0M4,4V22H20V24H4A2,2 0 0,1 2,22V4H4Z" />
+                                </svg>
                             </div>
                         </div>
-                        
+                        <div class="item_content clearfix">
+                            <div class="occurance" title="{occuranceTitle}"> 
+                            {occurance} 
+                            </div>
+                            <div class="max_width_bound">
+                                <div class="type"> {errorType} </div>
+                                <div class="origin"> {origin} </div>
+                            </div>
+                            <div>
+                                <div class="iframeInfo"> {iframeUrl} </div>
+
+                                <div class="call_stack_content">
+                                    {stack}
+                                </div>
+                            </div>
+                        </div>
                     </li>
 
                 </script>
